# gosc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: gosc.cmake
examples/: CMakeLists.txt  generator.c
include/gos/: color.h  data.h  dynamic.h  geometry.h  interpolate.h  line.h  mapping.h  nearest.h  noise.h  perlin.h  scale.h  screen.h  signal.h  statistics.h  text.h  types.h  version.h.in
src/: CMakeLists.txt  color.c  data.c  dynamic.c  geometry.c  interpolate.c  nearest.c  noise.c  perlin.c  scale.c  screen.c  signal.c  statistics.c  text.c
tests/: CMakeLists.txt  color.cpp  data.cpp  dynamic.cpp  geometry.cpp  interpolate.cpp  nearest.cpp  noise.cpp  scale.cpp  screen.cpp  signal.cpp  statistics.cpp  text.cpp
vs/properties/testing/: gmock.props  gtest.props
vs/vs16/: gosc.sln
vs/vs16/gosc/: gosc.vcxproj  gosc.vcxproj.filters
vs/vs16/tests/: tests.vcxproj  tests.vcxproj.filters
